--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "pull-env-local": "vercel env pull .env.local"
   },
   "dependencies": {
+    "blockies": "^0.0.2",
     "dayjs": "^1.10.6",
     "next": "11.0.1",
     "react": "17.0.2",
@@ -17,6 +18,7 @@
     "swr": "^0.5.6"
   },
   "devDependencies": {
+    "@types/blockies": "^0.0.2",
     "@types/react": "17.0.14",
     "autoprefixer": "^10.3.1",
     "eslint": "7.31.0",
