--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@heroicons/react": "^1.0.2",
     "blockies": "^0.0.2",
+    "classnames": "^2.3.1",
     "dayjs": "^1.10.6",
     "next": "11.0.1",
     "react": "17.0.2",
