--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-infinite-scroller": "^1.2.4",
     "swr": "^0.5.6"
   },
   "devDependencies": {
     "@types/blockies": "^0.0.2",
     "@types/react": "17.0.14",
+    "@types/react-infinite-scroller": "^1.2.2",
     "autoprefixer": "^10.3.1",
     "eslint": "7.31.0",
     "eslint-config-next": "11.0.1",
