--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "pull-env-local": "vercel env pull .env.local"
   },
   "dependencies": {
+    "@headlessui/react": "^1.3.0",
     "@heroicons/react": "^1.0.2",
     "blockies": "^0.0.2",
     "classnames": "^2.3.1",
