--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "@types/blockies": "^0.0.2",
+    "@types/gtag.js": "^0.0.7",
     "@types/react": "17.0.14",
     "@types/react-infinite-scroller": "^1.2.2",
     "autoprefixer": "^10.3.1",
